# bevy_plugin_pixelate

./: Cargo.toml
assets/: pixelated.wgsl
examples/: all-meshes.rs  lil-car.rs  scene.rs
src/: lib.rs  pixelated.wgsl  pixelating_plugin.rs  rotators.rs
