[package]
name = "gen-04-pixels"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.17", features = ["file_watcher"] }
bevy-inspector-egui = "0.35"
bevy_asset_loader = { version = "0.24", features = ["3d"] }
