[package]
name = "bevy_plugin_pixelate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.18", features = ["file_watcher", "bevy_core_pipeline"] }
bevy-inspector-egui = "0.36"
bevy_asset_loader = { version = "0.25", features = ["3d"] }
